created SynchronousBuffer