@@ -5,15 +5,13 @@ import dev.kuku.dto.LogDTO;
 import dev.kuku.vfl.models.BlockData;
 import dev.kuku.vfl.models.LogData;
 import dev.kuku.vfl.util.ApiClient;
-import dev.kuku.vfl.util.JSONUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 /**
@@ -24,12 +22,11 @@ import java.util.concurrent.Executors;
 public class DefaultBufferImpl implements VFLBuffer {
     private static final Logger logger = LoggerFactory.getLogger(DefaultBufferImpl.class);
     private final ApiClient apiClient = new ApiClient();
-    private final JSONUtil jsonUtil = new JSONUtil();
     private final List<LogData> logs;
     private final List<BlockData> blocks;
     private final int blockBufferSize;
     private final int logBufferSize;
-    private final Executor flushExecutor;
+    private final ExecutorService flushExecutor;
     // Volatile because we want the value directly from source and not the per-thread cached value
     private boolean isShuttingDown = false;
 
@@ -40,7 +37,11 @@ public class DefaultBufferImpl implements VFLBuffer {
         this.blockBufferSize = blockBufferSize;
         this.logBufferSize = logBufferSize;
         //We will run our flush operation in this thread
-        this.flushExecutor = Executors.newVirtualThreadPerTaskExecutor();
+        this.flushExecutor = Executors.newSingleThreadExecutor(r -> {
+            Thread t = new Thread(r);
+            t.setDaemon(false);
+            return t;
+        });
     }
 
     @Override
@@ -107,7 +108,7 @@ public class DefaultBufferImpl implements VFLBuffer {
         }
         try {
             var blockDTOs = blocksToFlush.stream().map(b -> new BlockDTO(b.getId(), b.getBlockName(), b.getParentBlockId().orElse(null))).toList();
-            var resp = apiClient.post("http://localhost:8080/api/v1/block/", jsonUtil.toJson(blockDTOs), Boolean.class);
+            var resp = apiClient.post("http://localhost:8080/api/v1/block/", blockDTOs, Boolean.class);
         } catch (Exception e) {
             logger.error("Failed to save blocks to database", e);
             //Re-add failed blocks back to the buffer
@@ -137,7 +138,8 @@ public class DefaultBufferImpl implements VFLBuffer {
                     l.getLogType(),
                     l.getBlockPointersString().orElse(null),
                     Instant.now().toEpochMilli())).toList();
-            apiClient.post("http://localhost:8080/api/v1/vfl/logs", jsonUtil.toJson(logsToAdd), Boolean.class);
+            var resp = apiClient.post("http://localhost:8080/api/v1/vfl/logs", logsToAdd, Boolean.class);
+            System.out.println("Flush log response = " + resp);
         } catch (Exception e) {
             logger.error("Failed to save logs to database", e);
             //Re-add failed logs back to the buffer
@@ -148,13 +150,13 @@ public class DefaultBufferImpl implements VFLBuffer {
     }
 
     @Override
-    public CompletableFuture<Void> flushAllAsync() {
+    public void flushAll() {
         isShuttingDown = true;
         logger.info("Flushing remaining data");
-        return CompletableFuture.runAsync(() -> {
+        flushExecutor.execute(() -> {
             flushBlocks();
             flushLogs();
-            logger.info("Final flush completed");
-        }, flushExecutor);
+        });
+        flushExecutor.shutdown();
     }
 }
